# LangYa.SentryLib

./: .editorconfig  .gitignore  CMakeLists.txt  Doxyfile  README.md  commands.sh
CodeLogic/Sources/: Action.cpp  CodeLogic.cpp  Task.cpp
Common/: README.md
Common/Sources/: Action.cpp  Common.cpp  Counter.cpp  IFormatByStream.cpp  ISerializable.cpp  LifeTimeDebugData.cpp  MemoryIO.cpp  MemoryView.cpp  PingPongBuffer.cpp  TaskExecutor.cpp  TimeStamp.cpp  TripleBuffer.cpp  UniqueBuffer.cpp
ConsoleHelper/: README.md
ConsoleHelper/Sources/: ConsoleCursor.cpp  ConsoleHelper.cpp  ConsoleKeyboard.cpp
Documents/html/: _application_info_8cpp__incl.map  _application_info_8cpp__incl.md5  _application_info_8hpp.js  _application_info_8hpp__dep__incl.map  _application_info_8hpp__dep__incl.md5  _application_info_8hpp__incl.map  _application_info_8hpp__incl.md5  _armor_plate_info_8cpp__incl.map  _armor_plate_info_8cpp__incl.md5  _armor_plate_info_8hpp.html  _armor_plate_info_8hpp.js  _armor_plate_info_8hpp__dep__incl.md5  _armor_plate_info_8hpp__incl.map  _armor_plate_info_8hpp__incl.md5  _c_make_c_compiler_id_8c.html  _command_line_arguments_8cpp.html  _command_line_arguments_8cpp__incl.map  _command_line_arguments_8hpp.html  _command_line_arguments_8hpp__dep__incl.map  _command_line_arguments_8hpp__dep__incl.md5  _configurator_8cpp.html  _configurator_8hpp.html  _configurator_8hpp__dep__incl.map  _configurator_8hpp__incl.map  _configurator_8hpp__incl.md5  _connection_8cpp.html  _connection_8cpp__incl.map  _connection_8cpp__incl.md5  _connection_8hpp.html  _connection_8hpp__dep__incl.md5  _connection_8hpp__incl.map  _controller_8cpp.html  (+464 more)
Headers/: Sango.hpp
Obsoleted/: Connection.hpp  ConsoleManipulator.cpp  ConsoleManipulator.hpp  IPv4TCPServer.hpp  MemoryAccess.hpp  SentryData.cpp  TCPConnection.cpp  TestData.hpp
Scripts/: Compile.sh  InstallBoost.sh  InstallSomeLibs.sh  ServerConnection.py  main.py
SentryFramework/: SentryController.cpp  SentryDevice.cpp  SentryMind.cpp  SentryMonitor.cpp  SentryReferee.cpp
Sources/: ApplicationInfo.cpp  ArmorPlate.cpp  ArmorPlateInfo.cpp  AutoAimModule.cpp  CanStreamFormatToConsoleFriendlyString.cpp  CanStreamFormatToJson.cpp  CanStreamFormatToJsonString.cpp  Collection.cpp  CommandLineArgument.cpp  CommandLineArguments.cpp  Configurator.cpp  Connection.cpp  ConsoleCursor.cpp  ConsoleKeyboard.cpp  ConsoleManipulator.cpp  ContentContainer.cpp  Controller.cpp  Counter.cpp  DebugData.cpp  DeserializableContent.cpp  DeserializableContentSensor.cpp  Device.cpp  ExchangeCube.cpp  IFormatByStream.cpp  IPv4Address.cpp  IPv4Endpoint.cpp  IPv4TCPAcceptor.cpp  IPv4TCPServer.cpp  IPv4TCPSocket.cpp  IStreamFormat.cpp  Interfaces.cpp  LangYaCommunicator.cpp  LangYaConnection.cpp  Manager.cpp  MatchStatusManager.cpp  Math.cpp  MemoryAccess.cpp  MemoryIO.cpp  MemoryView.cpp  Monitor.cpp  (+32 more)
Testers/: ConsoleManipulatorTester.cpp  ControllerSensorTester.cpp  CopyOperationTest.cpp  DynamicStackTester.cpp  EasyTcpServer.cpp  ExampleApp.cpp  ExceptionHandler.cpp  IPv4EndPointTester.cpp  IdealLogic.cpp  JsonTester.cpp  LangYaRefereeSystem.cpp  MemoryAccessTester.cpp  MemoryViewTester.cpp  MonitorTester.cpp  PingPongTester.cpp  SentryAI.cpp  SentryMind.cpp  StringContentManager.cpp  TCPApplicationIOHost.cpp  TCPClientTester.cpp  TCPMonitor.cpp  TCPServerTester.cpp  TCPTester.cpp  TestApp.cpp  TinySentryMind.cpp  TripleBufferTester.cpp  UDPReceiver.cpp  UDPTester.cpp  UserInterfaceExp.cpp
ToBeManaged/UniversalController/: CMakeLists.txt
ToBeManaged/UniversalController/Code/Headers/UniversalController/Communication/: Connection.hpp  MemoryAccess.hpp  SerialPort.hpp  SerialPortInfo.hpp  TCPConnection.hpp
ToBeManaged/UniversalController/Code/Headers/UniversalController/Memory/: MemoryView.hpp  PingPongBuffer.hpp  Resource.hpp  ResourceFlag.hpp  Serializer.hpp  TripleBuffer.hpp  UniqueBuffer.hpp
ToBeManaged/UniversalController/Code/Headers/UniversalController/Robotic/: Controller.hpp  Device.hpp  Sensor.hpp  Sentry.hpp
ToBeManaged/UniversalController/Code/Headers/UniversalController/Robotic/Sentry/: ComplexFireByte.hpp  CompressedSentryControllerData.hpp  CompressedSentrySensorData.hpp  SentryController.hpp  SentryControllerData.hpp  SentrySensor.hpp  SentrySensorData.hpp  SentrySerialPort.hpp
ToBeManaged/UniversalController/Code/Helpers/: CodeSnippets.hpp
ToBeManaged/UniversalController/Code/Scripts/: SangoConfigurator.cmake
ToBeManaged/UniversalController/Code/Sources/: ComplexFireByte.cpp  CompressedSentryControllerData.cpp  MemoryAccess.cpp  MemoryView.cpp  PingPongBuffer.cpp  Robotic.cpp  SerialPort.cpp  SerialPortInfo.cpp  TCPConnection.cpp  TripleBuffer.cpp  UniqueBuffer.cpp
ViMap/: README.md
docs/: _application_info_8cpp.html  _application_info_8cpp_8o_8d.html  _application_info_8cpp__incl.map  _application_info_8cpp__incl.md5  _application_info_8hpp.html  _application_info_8hpp__dep__incl.map  _application_info_8hpp__dep__incl.md5  _application_info_8hpp__incl.map  _application_info_8hpp__incl.md5  _armor_plate_8cpp.html  _armor_plate_8cpp__incl.map  _armor_plate_8cpp__incl.md5  _armor_plate_8hpp.html  _armor_plate_8hpp.js  _armor_plate_8hpp__dep__incl.map  _armor_plate_8hpp__dep__incl.md5  _armor_plate_8hpp__incl.map  _armor_plate_8hpp__incl.md5  _armor_plate_info_8cpp.html  _armor_plate_info_8cpp_8o_8d.html  _armor_plate_info_8cpp__incl.map  _armor_plate_info_8cpp__incl.md5  _armor_plate_info_8hpp.html  _armor_plate_info_8hpp__dep__incl.map  _armor_plate_info_8hpp__dep__incl.md5  _armor_plate_info_8hpp__incl.map  _armor_plate_info_8hpp__incl.md5  _auto_aim_module_8cpp.html  _auto_aim_module_8cpp_8o_8d.html  _auto_aim_module_8cpp__incl.map  _auto_aim_module_8cpp__incl.md5  _auto_aim_module_8hpp.html  _auto_aim_module_8hpp.js  _auto_aim_module_8hpp__dep__incl.map  _auto_aim_module_8hpp__dep__incl.md5  _auto_aim_module_8hpp__incl.map  _auto_aim_module_8hpp__incl.md5  _c_1_2_users_2_sango_2source_2_sentry_lib_2_headers_2_lang_ya_2_sentry_lib_2_common_2_memory_view_8hpp-example.html  _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c.js  (+4213 more)
(+422 files in other folders)
